--- a/openerp-server.conf
+++ b/openerp-server.conf
@@ -1,13 +1,8 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-;db_host = False
-;db_host = False
-;db_port = False
-;db_user = odoo
-db_password = 123456
-db_port = 5432
+db_host = False
+db_port = False
 db_user = odoo
-db_password = 123456
-;addons_path = /usr/lib/python2.7/dist-packages/openerp/addons
-addons_path = /usr/lib/python2.7/dist-packages/openerp/addons,/home/odoo/PycharmProjects/estate
+db_password = 12345 
+addons_path = /home/odoo/PycharmProjects/estate
