[ADD] estate: labour's activity based on attendance code (K or K2).
[ADD] estate: support daily wage based on attendance code (exclude quantity)3

[FIX] estate: support daily wage based on attendance code

* fix some api.multi

[FIX] estate: achievement over standard could be seen from productivity.

[FIX] estate: alert require different color

* use orange instead of red (default for draft records).
* user required to list record which have been payslip or in correction.
* search default cannot use AND condition for multiple filter.

[ADD] estate: user required upkeep report.

[FIX] estate: get estate location

Division might have multiple level such as Nursery division.

[FIX] estate: remove responsibility get estate to EstateLocation.

[ADD] estate: division report with options

Parameter:
* Period (date start and end selection).
* Group by (estate/division).
* Location selection (depends on group by).

[ADD] estate: LHA Custom Report

using recordset - has problem with calling from xml
estate.upkeep.activity not callable.

[FIX] estate: interchange estate/division type reset report.

[ADD] estate: LHA return active upkeep

[ADD] estate: sum of number of days

[FIX] estate: lha low level sql query required state.

[ADD] estate: low level sql query per location.

[FIX] estate: required to compute LHA material usage per activity.

[FIX] estate: report by division only.

[ADD] estate: LHA material usage.

[ADD] estate: add lha cost and cost ratio.

Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 .idea/*.xml
 .idea/*.name
 /openerp-server.conf
+.idea/modules.xml
+.idea/odoo-dev.xml
+.idea/vcs.xml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
